--- a/POSVTAV2/cortes_pendientes2.html
+++ b/POSVTAV2/cortes_pendientes2.html
@@ -450,74 +450,37 @@ if (img1 && img1.startsWith("data:image/png")) {
 
 async function graficaDeptos(p) {
   const div = document.getElementById("graficaDeptos");
-  const canvas = document.getElementById("canvasDeptos");
-  const ctx = canvas.getContext("2d");
-
-  // 🧩 Aseguramos tamaño físico del canvas
-  canvas.width = 800;
-  canvas.height = 500;
-  div.style.width = "800px";
-  div.style.height = "500px";
+  const ctx = document.getElementById("canvasDeptos").getContext("2d");
 
   div.style.display = "block";
+  div.style.position = "absolute";
+  div.style.top = "-1000px"; // fuera de vista, pero visible para render
+  div.style.left = "-1000px";
   div.style.visibility = "visible";
-  div.style.opacity = "1";
 
-  // 🎨 Crear el gráfico
   const chart = new Chart(ctx, {
     type: "pie",
     data: {
       labels: Object.keys(p),
-      datasets: [
-        {
-          data: Object.values(p).map(v => v.venta),
-          backgroundColor: [
-            "#007bff", "#ff6384", "#ffc107", "#28a745",
-            "#17a2b8", "#6610f2", "#fd7e14", "#6f42c1",
-            "#20c997", "#e83e8c"
-          ],
-          borderWidth: 1,
-        }
-      ]
+      datasets: [{
+        data: Object.values(p).map(v => v.venta),
+        backgroundColor: [
+          "#007bff", "#ff6384", "#ffc107", "#28a745",
+          "#17a2b8", "#6610f2", "#fd7e14", "#6f42c1",
+          "#20c997", "#e83e8c"
+        ]
+      }]
     },
-    options: {
-      plugins: {
-        legend: { position: "right" },
-        title: { display: true, text: "Distribución por Departamento", font: { size: 18 } }
-      },
-      animation: { duration: 0 },
-      responsive: false,
-      maintainAspectRatio: false
-    }
+    options: { animation: false, responsive: false }
   });
 
-  // 🕒 Esperar asegurando render completo
-  await new Promise(r => setTimeout(r, 1000));
+  await new Promise(r => setTimeout(r, 1000)); // esperar render
+  const img = await domtoimage.toPng(div); // 🔹 igual que en la versión vieja
 
-  // 📸 Capturar imagen en formato seguro
-  let imgData = "";
-  try {
-    imgData = canvas.toDataURL("image/png", 1.0);
-  } catch (err) {
-    console.warn("⚠️ Error al generar imagen del gráfico:", err);
-  }
-
-  // ⚙️ Validar contenido
-  if (!imgData || imgData.length < 1000) {
-    console.warn("⚠️ Imagen inválida o vacía, se omitirá en el PDF.");
-    chart.destroy();
-    div.style.display = "none";
-    return null;
-  }
-
-  // 🧹 Limpiar
   chart.destroy();
   div.style.display = "none";
-
-  console.log("✅ Gráfica generada correctamente:", imgData.substring(0, 50) + "...");
-  return imgData;
+  return img;
 }
-
 
   async function enviarTelegram(pdfBlob, nombre, texto) {
     try {
