--- a/POSVTAV2/index.html
+++ b/POSVTAV2/index.html
@@ -165,6 +165,7 @@
   margin-left: auto !important;
   margin-right: auto !important;
 }
+#ticket { display:block !important; }
   
   </style>
 </head>
